2010-07-24 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Drawable.cpp (setSkinName): if vSkinName is empty, take
	the parent skin name.

	* src/ogreGui/Drawable.cpp (getSkinName): implementation.
	* src/ogreGui/Drawable.cpp (setTexturePtr): implementation.
	* src/ogreGui/Drawable.cpp (getTexturePtr): implementation.

2010-07-24 Jerome Pasquier  <rainbru@free.fr>

	* src/maincore/gameengine.cpp (getGuiTransparency): get 
	mGuiTransparency member value.
	* src/maincore/gameengine.cpp (setGuiTransparency): change 
	mGuiTransparency member value.
	* src/maincore/gameengine.cpp (draw): Draw the actual game state.

	* src/maincore/gameengine.cpp (cleanup): Delete mBrush.
	* src/maincore/gameengine.cpp (initOgre): Instantiate mBrush.
	* src/maincore/gameengine.h (mBrush, mGuiTransparency): Members added.
		
	* src/ogreGui/Brush.cpp (Brush): Implement a default constructor
	for unit tests purpose.

	* src/ogreGui/Brush.hpp (tBrushState): Change prefix to BRS.
	
2010-07-23 Jerome Pasquier  <rainbru@free.fr>

	* src/test/ogreGui/Makefile.am: Added include flag for maincore
	due to BrushTest.

	* src/maincore/gamestate.cpp (draw): Calls mContainer::draw() if 
	mContainer::isDirty().
	* src/maincore/gamestate.h: Added a scissor rectangle member to be
	able to call Container::compute().
	
2010-07-18 Jerome Pasquier  <rainbru@free.fr>
	
	* src/maincore/gamestate.cpp (draw): draw the container member, does not
	handle compute and dirty flag yet.
	* src/maincore/gamestate.cpp (GameState): mContainer created with window
	dimensions from Viewport but with a NULL parent.
	* src/maincore/gamestate.h: Now contains a Container member;
		
	* src/ogreGui/GuiVertex.hpp: Now uses Ogre::Vector3 instead of
	my own implementation from oldOgreGui.
	
	* src/ogreGui/GuiVertex: Retirieved from oldOgreGui.
	
	* src/ogreGui/Brush.cpp (checkHarwareBuffer): Retrieved from QuadRenderer.
	* src/ogreGui/Brush.cpp (yPixelToNative): Retrieved from QuadRenderer.