@@ -1,0 +1,54 @@
+/*
+ *  Copyright 2006-2010 Jerome PASQUIER
+ * 
+ *  This file is part of RainbruRPG.
+ *
+ *  RainbruRPG is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  RainbruRPG is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with RainbruRPG; if not, write to the Free Software
+ *  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+ *  02110-1301  USA
+ *
+ */
+
+#ifndef _TEXTURE_NOT_FOUND_EXCEPTION_HPP_
+#define _TEXTURE_NOT_FOUND_EXCEPTION_HPP_
+
+#include <exception>
+
+#include <string>
+
+using namespace std;
+
+namespace RainbruRPG
+{
+  namespace Exception{
+
+    /** An exception thrown when Drawable cannot load a texture with a skin name
+      *
+      *
+      */
+    class TextureNotFoundException : public std::exception
+    {
+    public:
+      TextureNotFoundException(const string&) throw();
+      virtual ~TextureNotFoundException() throw();
+
+      virtual const char* what() const throw();
+
+    private:
+      string mMessage;
+    };
+  }
+}
+
+#endif // !_TEXTURE_NOT_FOUND_EXCEPTION_HPP_
