@@ -5,6 +5,8 @@ ogregui2_tests_LDADD = -L$(top_srcdir)/src/common/.libs			\
 			 -lrainbrurpg-common 				\
 			-L$(top_srcdir)/src/ogreGui/.libs		\
 			 -lrainbrurpg-ogregui				\
+			-L$(top_srcdir)/src/maincore/.libs		\
+			 -lrainbrurpg-core				\
 			 $(GNET_LIBS)					\
 			 $(RPG_LIB_ADD)					\
 			 $(CPPUNIT_LIBS)				\
@@ -14,7 +16,7 @@ ogregui2_tests_LDADD = -L$(top_srcdir)/src/common/.libs			\
 
 INCLUDES = -I$(top_srcdir)/src/common/ 			\
 	   -I$(top_srcdir)/src/ogreGui/			\
-	   -I$(top_srcdir)/src/maincore/			\
+	   -I$(top_srcdir)/src/maincore/		\
 	   $(GNET_CFLAGS) 				\
 	   $(OGRE_CFLAGS) 				\
 	   $(OIS_CFLAGS)				\
